Fix icon alignment in Firefox (issue #13)

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -130,4 +130,5 @@ header {
   &.black { background: black; }
   &.foul { background: white; color: #E53939; }
   &.poo { background: #9C6D39; }
+  img { margin: auto; }
 }
